# SheetProof

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  excel_compatibility_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  sheetproof.yml  tabulint.yml
.streamlit/: config.toml
action/: action.yml
docs/: demo-risky.md  demo-safe.md  demo-script.md
docs/issues/: 01-visual-formula-dependency-graph.md  02-github-pull-request-review-comments.md  03-custom-python-rule-plugins.md  04-improve-complex-formula-parsing.md  05-benchmark-large-workbooks.md  06-add-financial-workbook-example.md  07-add-ai-agent-integration-example.md  08-improve-windows-installation-documentation.md
docs/releases/: v0.1.0.md
examples/: generate_demo_workbooks.py  sheetproof.example.yml
scripts/: review_changed_workbooks.py
sheetproof/: __init__.py  __main__.py  _version.py  cli.py  exceptions.py  models.py
sheetproof/diff/: __init__.py  cell_diff.py  formula_diff.py  pattern_diff.py  workbook_diff.py
sheetproof/graph/: __init__.py  dependency_graph.py  impact_analysis.py
sheetproof/parser/: __init__.py  formulas.py  workbook.py
sheetproof/reports/: __init__.py  html_report.py  json_report.py
sheetproof/reports/templates/: report.html.j2
sheetproof/risk/: __init__.py  scorer.py
sheetproof/rules/: __init__.py  builtin_rules.py  engine.py  loader.py
sheetproof/services/: review_service.py
tabulint/: __init__.py  __main__.py  _version.py  cli.py  exceptions.py  models.py
tabulint/diff/: __init__.py  cell_diff.py  formula_diff.py  pattern_diff.py  workbook_diff.py
tabulint/graph/: __init__.py  dependency_graph.py  impact_analysis.py
tabulint/parser/: __init__.py  formulas.py  workbook.py
tabulint/reports/: __init__.py  html_report.py  json_report.py
tabulint/reports/templates/: report.html.j2
tabulint/risk/: __init__.py  scorer.py
tabulint/rules/: __init__.py  builtin_rules.py  engine.py  loader.py
tabulint/services/: review_service.py
tests/: __init__.py  conftest.py  test_action_script.py  test_cell_style_semantics.py  test_cli.py  test_diff.py  test_end_to_end.py  test_formula_budget.py  test_formula_metadata.py  test_formulas.py  test_graph.py  test_packaging.py  test_parser.py  test_public_api.py  test_reports.py  test_risk.py  test_rules.py  test_web_config.py  test_workflow_security.py
web/: app.py
