[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tabulint"
dynamic = ["version"]
description = "Deterministic semantic review and CI for Excel workbook changes"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tabulint contributors" }]
keywords = ["excel", "xlsx", "audit", "diff", "ci", "spreadsheet"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = [
  "click>=8.3.3,<9",
  "Jinja2>=3.1.4,<4",
  "openpyxl>=3.1.5,<4",
  "pydantic>=2.8,<3",
  "Pygments>=2.20,<3",
  "PyYAML>=6.0.2,<7",
  "typer>=0.26.8,<1",
]

[project.optional-dependencies]
web = ["streamlit>=1.39,<2"]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<8",
  "ruff>=0.7,<1",
  "types-PyYAML>=6.0.12",
]
release = [
  "build>=1.2,<2",
  "setuptools>=77",
  "twine>=6,<7",
]

[project.urls]
Homepage = "https://github.com/huangyikai05/Tabulint"
Repository = "https://github.com/huangyikai05/Tabulint"
Issues = "https://github.com/huangyikai05/Tabulint/issues"
Changelog = "https://github.com/huangyikai05/Tabulint/blob/main/CHANGELOG.md"

[project.scripts]
tabulint = "tabulint.cli:app"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["tabulint*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "tabulint._version.__version__" }

[tool.setuptools.package-data]
tabulint = ["py.typed"]
"tabulint.reports" = ["templates/*.j2"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["examples/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
files = ["tabulint"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["openpyxl.*", "yaml.*"]
ignore_missing_imports = true
